--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,14 @@
 .dataitem{
   margin-left: 10px;
   padding-left: 10px;
-  display: flex;
-  width: 40%;
+  display: flex; 
   border: 1px solid black;
   flex-direction: column;
   align-items: flex-start;
+}
+.data{
+  display: flex;
+}
+.datalist{
+  width: 33%;
 }
